WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209810
REGRESSION: (
r259236
) [ iOS and Catalina wk2 Debug ] ASSERTION FAILED: m_debugLoggingEnabled in WebKit::ResourceLoadStatisticsStore::debugBroadcastConsoleMessage
https://bugs.webkit.org/show_bug.cgi?id=209810
Summary
REGRESSION: (r259236) [ iOS and Catalina wk2 Debug ] ASSERTION FAILED: m_deb...
Jason Lawrence
Reported
2020-03-31 07:54:41 PDT
Created
attachment 395038
[details]
enable-debug-mode-crash-log http/tests/resourceLoadStatistics/enable-debug-mode.html http/tests/resourceLoadStatistics/enable-debug-mode-database.html http/tests/resourceLoadStatistics/set-custom-prevalent-resource-in-debug-mode-database.html http/tests/resourceLoadStatistics/set-custom-prevalent-resource-in-debug-mode.html Description: This test is crashing on iOS wk2 Debug and Catalina wk2 Debug. History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=http%2Ftests%2FresourceLoadStatistics%2Fenable-debug-mode.html&test=http%2Ftests%2FresourceLoadStatistics%2Fenable-debug-mode-database.html&test=http%2Ftests%2FresourceLoadStatistics%2Fset-custom-prevalent-resource-in-debug-mode-database.html&test=http%2Ftests%2FresourceLoadStatistics%2Fset-custom-prevalent-resource-in-debug-mode.html&platform=ios&platform=mac&style=debug&limit=50000
Diff: Thread 3 Crashed:: Dispatch queue: WebResourceLoadStatisticsStore Process Data Queue 0 com.apple.JavaScriptCore 0x0000000137977c2e WTFCrash + 14 (Assertions.cpp:309) 1 com.apple.WebKit 0x00000001121a4f2b WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebKit 0x00000001129e2d36 WebKit::ResourceLoadStatisticsStore::debugBroadcastConsoleMessage(JSC::MessageSource, JSC::MessageLevel, WTF::String const&) + 118 (ResourceLoadStatisticsStore.cpp:591) 3 com.apple.WebKit 0x00000001129ec121 WebKit::ResourceLoadStatisticsStore::setResourceLoadStatisticsDebugMode(bool) + 561 (ResourceLoadStatisticsStore.cpp:303) 4 com.apple.WebKit 0x0000000112a2c4e1 WebKit::WebResourceLoadStatisticsStore::setResourceLoadStatisticsDebugMode(bool, WTF::CompletionHandler<void ()>&&)::$_44::operator()() + 97 5 com.apple.WebKit 0x0000000112a2c3ce WTF::Detail::CallableWrapper<WebKit::WebResourceLoadStatisticsStore::setResourceLoadStatisticsDebugMode(bool, WTF::CompletionHandler<void ()>&&)::$_44, void>::call() + 30 (Function.h:52) 6 com.apple.WebKit 0x00000001122938a2 WTF::Function<void ()>::operator()() const + 130 (Function.h:84) 7 com.apple.WebKit 0x00000001129fe6be WebKit::WebResourceLoadStatisticsStore::postTask(WTF::Function<void ()>&&)::'lambda'()::operator()() const + 30 (WebResourceLoadStatisticsStore.cpp:228) 8 com.apple.WebKit 0x00000001129fe5ee WTF::Detail::CallableWrapper<WebKit::WebResourceLoadStatisticsStore::postTask(WTF::Function<void ()>&&)::'lambda'(), void>::call() + 30 (Function.h:52) 9 com.apple.JavaScriptCore 0x00000001379a2252 WTF::Function<void ()>::operator()() const + 130 (Function.h:84) 10 com.apple.JavaScriptCore 0x0000000137aaca5e WTF::WorkQueue::dispatch(WTF::Function<void ()>&&)::$_0::operator()() const + 30 (WorkQueueCocoa.cpp:38) 11 com.apple.JavaScriptCore 0x0000000137aacc52 WTF::BlockPtr<void ()> WTF::BlockPtr<void ()>::fromCallable<WTF::WorkQueue::dispatch(WTF::Function<void ()>&&)::$_0>(WTF::WorkQueue::dispatch(WTF::Function<void ()>&&)::$_0)::'lambda'(void*)::operator()(void*) const + 34 (BlockPtr.h:105) 12 com.apple.JavaScriptCore 0x0000000137aacc25 WTF::BlockPtr<void ()> WTF::BlockPtr<void ()>::fromCallable<WTF::WorkQueue::dispatch(WTF::Function<void ()>&&)::$_0>(WTF::WorkQueue::dispatch(WTF::Function<void ()>&&)::$_0)::'lambda'(void*)::__invoke(void*) + 21 (BlockPtr.h:104) 13 libdispatch.dylib 0x00007fff6e8866c4 _dispatch_call_block_and_release + 12 14 libdispatch.dylib 0x00007fff6e887658 _dispatch_client_callout + 8 15 libdispatch.dylib 0x00007fff6e88cc44 _dispatch_lane_serial_drain + 597 16 libdispatch.dylib 0x00007fff6e88d5d6 _dispatch_lane_invoke + 363 17 libdispatch.dylib 0x00007fff6e896c09 _dispatch_workloop_worker_thread + 596 18 libsystem_pthread.dylib 0x00007fff6eae1a3d _pthread_wqthread + 290 19 libsystem_pthread.dylib 0x00007fff6eae0b77 start_wqthread + 15
Attachments
enable-debug-mode-crash-log
(66.31 KB, text/plain)
2020-03-31 07:54 PDT
,
Jason Lawrence
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-03-31 07:55:01 PDT
<
rdar://problem/61106971
>
Ryan Haddad
Comment 2
2020-03-31 08:23:31 PDT
ASSERTION FAILED: m_debugLoggingEnabled /Volumes/Data/slave/catalina-debug/build/Source/WebKit/NetworkProcess/Classifier/ResourceLoadStatisticsStore.cpp(591) : void WebKit::ResourceLoadStatisticsStore::debugBroadcastConsoleMessage(JSC::MessageSource, JSC::MessageLevel, const WTF::String &)
Jason Lawrence
Comment 3
2020-03-31 08:28:00 PDT
I was able to reproduce this issue with
r259236
, but was not able to reproduce it with
r259235
.
r259236
: run-webkit-tests --iterations 999 --exit-after-n-failures 3 -f --debug --force http/tests/resourceLoadStatistics/enable-debug-mode.html [4/999] http/tests/resourceLoadStatistics/enable-debug-mode.html failed unexpectedly (com.apple.WebKit.Networking.Development crashed [pid=50757]) [4/999] http/tests/resourceLoadStatistics/enable-debug-mode.html failed unexpectedly (com.apple.WebKit.Networking.Development crashed [pid=50756]) [4/999] http/tests/resourceLoadStatistics/enable-debug-mode.html failed unexpectedly (com.apple.WebKit.Networking.Development crashed [pid=50758]) Exiting early after 3 failures. 3 tests run. 0 tests ran as expected, 3 didn't (996 didn't run):
r259235
: run-webkit-tests --iterations 999 --exit-after-n-failures 3 -f --debug --force http/tests/resourceLoadStatistics/enable-debug-mode.html All 999 tests ran as expected.
Devin Rousso
Comment 4
2020-03-31 09:09:50 PDT
Landed a fix in
r259293
<
https://trac.webkit.org/changeset/259293/webkit
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug