REGRESSION: (r259236) [ iOS and Catalina wk2 Debug ] ASSERTION FAILED: m_debugLoggingEnabled in WebKit::ResourceLoadStatisticsStore::debugBroadcastConsoleMessage https://bugs.webkit.org/show_bug.cgi?id=209810 <rdar://problem/61106971>

Unreviewed, covered by existing tests.

* NetworkProcess/Classifier/ResourceLoadStatisticsStore.cpp:
(WebKit::ResourceLoadStatisticsStore::debugBroadcastConsoleMessage):
Remove the assertion since `debugBroadcastConsoleMessage` is also called when turning off
debug logging mode via `setResourceLoadStatisticsDebugMode`. Fundamentally, it's just a
wrapper function for `broadcastConsoleMessage` anyways, so it doesn't need to be gated.

Canonical link: https://commits.webkit.org/222728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259293 268f45cc-cd09-0410-ab3c-d52691b4dbfc